# meridian-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.githooks/: README.md  pre-commit  pre-push
.github/: dependabot.yml
.github/workflows/: audit.yml  ci.yml
crates/aggregator/: Cargo.toml
crates/core/: Cargo.toml
crates/meridian/: Cargo.toml
crates/server/grpc/: Cargo.toml
crates/server/rest/: Cargo.toml
crates/server/ws/: Cargo.toml
crates/tui/: Cargo.toml
crates/venues/binance/: Cargo.toml
crates/venues/bybit/: Cargo.toml
crates/venues/coinbase/: Cargo.toml
crates/venues/jupiter/: Cargo.toml
crates/venues/uniswap-v3/: Cargo.toml
