[package]
name = "meridian-server-rest"
version = "0.1.0"
edition = "2024"

[dependencies]
meridian-core       = { path = "../../core" }
meridian-aggregator = { path = "../../aggregator" }
axum       = { workspace = true }
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
